<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/inout_new_password"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/common_font_size"/>

        <EditText
            android:id="@+id/et_password_first"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_selector"
            android:hint="@string/inout_new_password_hint"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/common_font_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/confirm_new_password"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/common_font_size"/>



            <EditText
                android:id="@+id/et_password_second"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_selector"
                android:hint="@string/confirm_new_password_again"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/common_font_size"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/verifycode"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/common_font_size"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_verifycode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_selector"
                android:hint="@string/input_verifycode"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/common_font_size"/>

            <Button
                android:id="@+id/btn_get_verifycode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/get_verifycode"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/common_font_size"/>

        </RelativeLayout>



    </LinearLayout>


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="@dimen/button_font_size"/>
</LinearLayout>